News UAT/force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>2015-09-17 SFE-740</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>ExLog-{0000}</displayFormat>
        <label>Exception Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>