News UAT/force-app/main/default/objects/Exception_Log__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>Displays additional info</description>
    <label>Additional Info (Debug)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>