News UAT/force-app/main/default/objects/Exception_Log__c/fields/Class_Link__c.field-meta.xml
<CustomField>
    <fullName>Class_Link__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; +  Class_Id__c , &#39;View Class&#39;, &#39;_BLANK&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Link</label>
    <type>Text</type>
</CustomField>