News UAT/force-app/main/default/objects/Exception_Log__c/fields/Exception_Description__c.field-meta.xml
<CustomField>
    <fullName>Exception_Description__c</fullName>
    <description>Includes Stack Trace, DML operation info, etc</description>
    <label>Exception Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>