News UAT/force-app/main/default/objects/Exception_Log__c/fields/Key_Person_to_Notify__c.field-meta.xml
<CustomField>
    <fullName>Key_Person_to_Notify__c</fullName>
    <description>2015-09-17 SFE-740 This field is populated by custom setting via ExLog.</description>
    <label>Key Person to Notify</label>
    <type>Email</type>
</CustomField>