News UAT/force-app/main/default/objects/Exception_Log__c/fields/Parent_Exception__c.field-meta.xml
<CustomField>
    <fullName>Parent_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Exception</label>
    <referenceTo>Exception_Log__c</referenceTo>
    <relationshipName>Logged_Exeptions</relationshipName>
    <type>Lookup</type>
</CustomField>