News UAT/force-app/main/default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Line_Number__c</columns>
    <columns>Exception_Description__c</columns>
    <columns>Additional_Info__c</columns>
    <columns>Who__c</columns>
    <columns>Key_Person_to_Notify__c</columns>
    <columns>Notified__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>