News UAT/force-app/main/default/objects/Exception_Log__c/listViews/Limited_Exception_logs.listView-meta.xml
<ListView>
    <fullName>Limited_Exception_logs</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/16/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Limited Exception logs</label>
</ListView>